équilibrage vagues v1 + modif mineures sur code modifs mineures : - pouletBouclier : nom corrigé - pouletRoller : image à mettre, fonctionne - remplacement de qq get(0) par des getFirst